first draft: fixed overflowing stats number

--- a/output/theme/css/custom.css
+++ b/output/theme/css/custom.css
@@ -1,18 +1,9 @@
     /*nav height to accommodate the length of title */
     .custom-header {
-        display: -webkit-box;
-        display: -ms-flexbox;
         display: flex;
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: reverse;
-            -ms-flex-direction: row-reverse;
-                flex-direction: row-reverse;
-        -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
-        -webkit-box-pack: justify;
-            -ms-flex-pack: justify;
-                justify-content: space-between;
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: space-between;
     }
 
     .navbar-brand {
@@ -26,11 +17,8 @@
     /*align span element flex*/
     .article-info-span {
         padding-left: 0px;
-        display:-webkit-box;
-        display:-ms-flexbox;
         display:flex;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
+        flex-wrap: wrap;
     }
 
     .article-info-span div {
@@ -39,14 +27,9 @@
 
 
     .content-row {
-        display: -webkit-box;
-        display: -ms-flexbox;
         display: flex;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-        -webkit-box-align: stretch;
-            -ms-flex-align: stretch;
-                align-items: stretch;
+        flex-wrap: wrap;
+        align-items: stretch;
         margin-bottom: 20px;
     }
 
@@ -59,29 +42,16 @@
     
     .hf-stats {
         height: 480px;
-        display: -webkit-box;
-        display: -ms-flexbox;
         display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
-        -webkit-box-pack: justify;
-            -ms-flex-pack: justify;
-                justify-content: space-between;
-        -webkit-box-align: stretch;
-            -ms-flex-align: stretch;
-                align-items: stretch;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: stretch;
     }
 
     /*change*/
     .hf-change {
         height: 50%;
-        -webkit-box-flex: 1;
-            -ms-flex-positive: 1;
-                flex-grow: 1;
-        display: -webkit-box;
-        display: -ms-flexbox;
+        flex-grow: 1;
         display: flex;
         margin-bottom: 10px;
     }
@@ -90,29 +60,17 @@
     /*year stat*/
     .hf-years {
         height: 50%;
-        -webkit-box-flex: 1;
-            -ms-flex-positive: 1;
-                flex-grow: 1;
-        display: -webkit-box;
-        display: -ms-flexbox;
+        flex-grow: 1;
         display: flex;
-        -webkit-box-pack: justify;
-            -ms-flex-pack: justify;
-                justify-content: space-between;
+        justify-content: space-between;
     }
     
     .hf-93,
     .hf-09 {
         width: 50%;
-        display: -webkit-box;
-        display: -ms-flexbox;
         display: flex;
-        -webkit-box-flex: 1;
-            -ms-flex-positive: 1;
-                flex-grow: 1;
-        -webkit-box-pack: justify;
-            -ms-flex-pack: justify;
-                justify-content: space-between
+        flex-grow: 1;
+        justify-content: space-between
     }
     
     .hf-93 {
@@ -125,36 +83,19 @@
     /*each panel*/
     
     .num-stat {
-        -webkit-box-flex: 1;
-            -ms-flex-positive: 1;
-                flex-grow: 1;
-        display: -webkit-box;
-        display: -ms-flexbox;
+        flex-grow: 1;
         display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
+        flex-direction: column;
+        width:100%;
         margin-bottom: 0px
     }
     
     .num-stat .panel-body {
-        -webkit-box-flex: 1;
-            -ms-flex-positive: 1;
-                flex-grow: 1;
-        display: -webkit-box;
-        display: -ms-flexbox;
+        flex-grow: 1;
         display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
-        -webkit-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center;
-        -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
     
 
@@ -179,7 +120,16 @@
     #fl-map {
         height: 480px;
     }
-    /* Small devices (tablets, 768px and up) */
 
+    @media (min-width: 1440px){
+        .hf-change .num-stat p {
+            font-size: 150px;
+        }
+
+        .hf-years .num-stat p {
+            font-size: 70px;
+        }
+        
+    }
 
 
